--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "react-scripts": "5.0.0",
-    "sass": "1.49.8",
-    "typescript": "~4.1.5"
+    "sass": "1.54.4",
+    "typescript": "~4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +24,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
